Updated Jenkinsfile to reflect security update

--- a/auth_services/Jenkinsfile
+++ b/auth_services/Jenkinsfile
@@ -9,6 +9,7 @@ pipeline {
             steps {
                 cleanWs()
                 echo 'Hello World!!'
+                echo 'Updated Jenkins webhook security'
                 echo "The file name is $FILE_NAME"
             }
         }
