--- a/auth_services/Jenkinsfile
+++ b/auth_services/Jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
                 sh '''
                     mkdir build
                     touch build/laptop.txt
-                    echo 'Really coolll' >> build/laptop.txt
+                    echo 'Really cooll' >> build/laptop.txt
                 '''
             }
         }
