--- a/auth_services/Jenkinsfile
+++ b/auth_services/Jenkinsfile
@@ -54,7 +54,7 @@ pipeline {
                 sh '''
                     mkdir -p build
                     touch build/laptop.txt
-                    echo 'Really cool' >> build/laptop.txt
+                    echo 'Really cools' >> build/laptop.txt
                 '''
             }
         }
