--- a/auth_services/Jenkinsfile
+++ b/auth_services/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
         DOCKER_CRIDENTIALS_ID = 'dockerhub-jenkins'
         DOCKER_REGISTRY = 'https://hub.docker.com/u/doneze'
         DOCKER_HUB_REPO = 'doneze/auth'
-        TAG = 1.0.43
+        TAG = '1.0.43'
     }
 
     stages {
