--- a/auth_services/Jenkinsfile
+++ b/auth_services/Jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
         }
         stage('Checkout Code') {
             steps {
-                git url: 'https://github.com/Dezeabasili/hotel_kubernetes.git', branch: 'main', credentials: 'github-cred'
+                git url: 'https://github.com/Dezeabasili/hotel_kubernetes.git', branch: 'main', credentialsId: 'github-cred'
             }
         }
         stage('Build Docker Image') {
