--- a/auth_services/Jenkinsfile
+++ b/auth_services/Jenkinsfile
@@ -43,7 +43,7 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
-                    dockerImage = docker.build("$DOCKER_HUB_REPO:$TAG", 'auth_services')
+                    dockerImage = docker.build("$DOCKER_HUB_REPO:$TAG", "-f auth_services/Dockerfile ./auth_services")
                 }
             }
         }
