--- a/kubernetes-manifests-for-gitops/kubernetes-manifests/microservices-folders/auth/auth-deployment.yaml
+++ b/kubernetes-manifests-for-gitops/kubernetes-manifests/microservices-folders/auth/auth-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       # nodeName: worker-02
       containers:
-        - image: doneze/auth:1.0.42
+        - image: doneze/auth_services:1.0.43 doneze/auth:1.0.42
           ports:
            - containerPort: 4000
           name: auth
