--- a/auth_services/Jenkinsfile
+++ b/auth_services/Jenkinsfile
@@ -51,42 +51,53 @@ pipeline {
         //         }
         //     }
         // }
-        stage('Clone Repository') {
-            steps {
-                withCredentials([usernamePassword(credentialsId: 'github-cred', passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME')]) {
-                    sh '''
-                        #!/bin/bash
-                        set -x
-                        REPO_URL="https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/Dezeabasili/hotel_kubernetes.git"
-                        git clone "$REPO_URL" /tmp/temp_repo
-                    '''
-                }
-            }
-        }
+        // stage('Clone Repository') {
+        //     steps {
+        //         withCredentials([usernamePassword(credentialsId: 'github-cred', passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME')]) {
+        //             sh '''
+        //                 #!/bin/bash
+        //                 set -x
+        //                 REPO_URL="https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/Dezeabasili/hotel_kubernetes.git"
+        //                 git clone "$REPO_URL" /tmp/temp_repo
+        //             '''
+        //         }
+        //     }
+        // }
         stage('Modify Files') {
             steps {
                 sh '''
                     cd /tmp/temp_repo
                     git config user.name "Dezeabasili"
                     git config user.email "ezeabasili@yahoo.co.uk"
-                    sed -i "s|image:*|image: doneze/auth_services:1.0.43|" kubernetes-manifests-for-gitops/kubernetes-manifests/microservices-folders/auth/auth-deployment.yaml
+                    sed -i "s|image:.*|image: doneze/auth_services:1.0.43|" kubernetes-manifests-for-gitops/kubernetes-manifests/microservices-folders/auth/auth-deployment.yaml
                 '''
             }
         }
         stage('Commit & Push') {
             steps {
-                sh '''
-                    cd /tmp/temp_repo
-                    git add .
-                    git commit -m "Update Kubernetes manifest"
-                    git push
-                    rm -rf /tmp/temp_repo
-                '''
+                withCredentials([usernamePassword(
+                    credentialsId: 'github-cred', 
+                    passwordVariable: 'GIT_PASSWORD', 
+                    usernameVariable: 'GIT_USERNAME'
+                )]) {
+                    sh '''
+                        git config user.name "Jenkins"
+                        git config user.email "jenkins@example.com"
+                        
+                        # Check if there are changes to commit
+                        if git diff --quiet; then
+                            echo "No changes to commit."
+                        else
+                            git add .
+                            git commit -m "[ci skip] Update image tag to 1.0.43"
+                            git push "https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/Dezeabasili/hotel_kubernetes.git"
+                        fi
+                    '''
+                }
             }
         }
     }
 }
-
 
 
 
