--- a/auth_services/Jenkinsfile
+++ b/auth_services/Jenkinsfile
@@ -1,78 +1,34 @@
 pipeline {
     agent any
     environment {
-        MAJOR_VERSION = 1
-        MINOR_VERSION = 0
-        PATCH_VERSION = 0
         DOCKER_CRIDENTIALS_ID = 'dockerhub-jenkins'
         DOCKER_REGISTRY = 'https://hub.docker.com/u/doneze'
         DOCKER_HUB_REPO = 'doneze/auth'
+        // Use dynamic versioning here (example uses fixed TAG for simplicity)
         TAG = '1.0.43'
     }
 
     stages {
-        stage('Build') {
-            steps {
-                cleanWs()
-                sh '''
-                    mkdir -p tags_folder
-                    touch tags_folder/major_version.txt
-                    touch tags_folder/minor_version.txt
-                    touch tags_folder/patch_version.txt
-                    echo '2' >> tags_folder/major_version.txt
-                    echo '4' >> tags_folder/minor_version.txt
-                    echo '6' >> tags_folder/patch_version.txt
-                    MAJOR_VERSION=$(cat tags_folder/major_version.txt)
-                    MINOR_VERSION=$(cat tags_folder/minor_version.txt)
-                    PATCH_VERSION=$(cat tags_folder/patch_version.txt)
-                    PATCH_VERSION=$(( PATCH_VERSION + 1))
-                    echo "$MAJOR_VERSION"
-                    echo "$MINOR_VERSION"
-                    echo "$PATCH_VERSION"
-                '''
-            }
-        }
         stage('Checkout Code') {
             steps {
-                git url: 'https://github.com/Dezeabasili/hotel_kubernetes.git', branch: 'main', credentialsId: 'github-cred'
+                git url: 'https://github.com/Dezeabasili/hotel_kubernetes.git', 
+                     branch: 'main', 
+                     credentialsId: 'github-cred'
             }
         }
-        // stage('Build Docker Image') {
-        //     steps {
-        //         script {
-        //             dockerImage = docker.build("$DOCKER_HUB_REPO:$TAG", "-f auth_services/Dockerfile ./auth_services")
-        //         }
-        //     }
-        // }
-        // stage('Push To Docker') {
-        //     steps {
-        //         script {
-        //             docker.withRegistry('https://registry.hub.docker.com', "$DOCKER_CRIDENTIALS_ID") {dockerImage.push("$TAG")}
-        //         }
-        //     }
-        // }
-        // stage('Clone Repository') {
-        //     steps {
-        //         withCredentials([usernamePassword(credentialsId: 'github-cred', passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME')]) {
-        //             sh '''
-        //                 #!/bin/bash
-        //                 set -x
-        //                 REPO_URL="https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/Dezeabasili/hotel_kubernetes.git"
-        //                 git clone "$REPO_URL" /tmp/temp_repo
-        //             '''
-        //         }
-        //     }
-        // }
-        stage('Modify Files') {
+       
+        stage('Modify Image Tag') {
             steps {
-                sh '''
-                    cd /tmp/temp_repo
-                    git config user.name "Dezeabasili"
-                    git config user.email "ezeabasili@yahoo.co.uk"
-                    sed -i "s|image:.*|image: doneze/auth_services:1.0.43|" kubernetes-manifests-for-gitops/kubernetes-manifests/microservices-folders/auth/auth-deployment.yaml
-                '''
+                script {
+                    sh '''
+                        # Fix the sed command to replace the entire line
+                        sed -i "s|image:.*|image: doneze/auth_services:${TAG}|" \
+                            kubernetes-manifests-for-gitops/kubernetes-manifests/microservices-folders/auth/auth-deployment.yaml
+                    '''
+                }
             }
         }
+
         stage('Commit & Push') {
             steps {
                 withCredentials([usernamePassword(
@@ -89,7 +45,7 @@ pipeline {
                             echo "No changes to commit."
                         else
                             git add .
-                            git commit -m "[ci skip] Update image tag to 1.0.43"
+                            git commit -m "[ci skip] Update image tag to ${TAG}"
                             git push "https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/Dezeabasili/hotel_kubernetes.git"
                         fi
                     '''
@@ -98,6 +54,111 @@ pipeline {
         }
     }
 }
+
+
+
+
+
+// pipeline {
+//     agent any
+//     environment {
+//         MAJOR_VERSION = 1
+//         MINOR_VERSION = 0
+//         PATCH_VERSION = 0
+//         DOCKER_CRIDENTIALS_ID = 'dockerhub-jenkins'
+//         DOCKER_REGISTRY = 'https://hub.docker.com/u/doneze'
+//         DOCKER_HUB_REPO = 'doneze/auth'
+//         TAG = '1.0.43'
+//     }
+
+//     stages {
+//         stage('Build') {
+//             steps {
+//                 cleanWs()
+//                 sh '''
+//                     mkdir -p tags_folder
+//                     touch tags_folder/major_version.txt
+//                     touch tags_folder/minor_version.txt
+//                     touch tags_folder/patch_version.txt
+//                     echo '2' >> tags_folder/major_version.txt
+//                     echo '4' >> tags_folder/minor_version.txt
+//                     echo '6' >> tags_folder/patch_version.txt
+//                     MAJOR_VERSION=$(cat tags_folder/major_version.txt)
+//                     MINOR_VERSION=$(cat tags_folder/minor_version.txt)
+//                     PATCH_VERSION=$(cat tags_folder/patch_version.txt)
+//                     PATCH_VERSION=$(( PATCH_VERSION + 1))
+//                     echo "$MAJOR_VERSION"
+//                     echo "$MINOR_VERSION"
+//                     echo "$PATCH_VERSION"
+//                 '''
+//             }
+//         }
+//         stage('Checkout Code') {
+//             steps {
+//                 git url: 'https://github.com/Dezeabasili/hotel_kubernetes.git', branch: 'main', credentialsId: 'github-cred'
+//             }
+//         }
+//         // stage('Build Docker Image') {
+//         //     steps {
+//         //         script {
+//         //             dockerImage = docker.build("$DOCKER_HUB_REPO:$TAG", "-f auth_services/Dockerfile ./auth_services")
+//         //         }
+//         //     }
+//         // }
+//         // stage('Push To Docker') {
+//         //     steps {
+//         //         script {
+//         //             docker.withRegistry('https://registry.hub.docker.com', "$DOCKER_CRIDENTIALS_ID") {dockerImage.push("$TAG")}
+//         //         }
+//         //     }
+//         // }
+//         // stage('Clone Repository') {
+//         //     steps {
+//         //         withCredentials([usernamePassword(credentialsId: 'github-cred', passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME')]) {
+//         //             sh '''
+//         //                 #!/bin/bash
+//         //                 set -x
+//         //                 REPO_URL="https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/Dezeabasili/hotel_kubernetes.git"
+//         //                 git clone "$REPO_URL" /tmp/temp_repo
+//         //             '''
+//         //         }
+//         //     }
+//         // }
+//         stage('Modify Files') {
+//             steps {
+//                 sh '''
+//                     cd /tmp/temp_repo
+//                     git config user.name "Dezeabasili"
+//                     git config user.email "ezeabasili@yahoo.co.uk"
+//                     sed -i "s|image:.*|image: doneze/auth_services:1.0.43|" kubernetes-manifests-for-gitops/kubernetes-manifests/microservices-folders/auth/auth-deployment.yaml
+//                 '''
+//             }
+//         }
+//         stage('Commit & Push') {
+//             steps {
+//                 withCredentials([usernamePassword(
+//                     credentialsId: 'github-cred', 
+//                     passwordVariable: 'GIT_PASSWORD', 
+//                     usernameVariable: 'GIT_USERNAME'
+//                 )]) {
+//                     sh '''
+//                         git config user.name "Jenkins"
+//                         git config user.email "jenkins@example.com"
+                        
+//                         # Check if there are changes to commit
+//                         if git diff --quiet; then
+//                             echo "No changes to commit."
+//                         else
+//                             git add .
+//                             git commit -m "[ci skip] Update image tag to 1.0.43"
+//                             git push "https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/Dezeabasili/hotel_kubernetes.git"
+//                         fi
+//                     '''
+//                 }
+//             }
+//         }
+//     }
+// }
 
 
 
